k8s/configserver/configserver-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: one8pulse-configserver
  namespace: one8pulse
spec:
  replicas: 2
  selector:
    matchLabels:
      app: one8pulse
      component: configserver
  template:
    metadata:
      labels:
        app: one8pulse
        component: configserver
    spec:
      serviceAccountName: aws-csi-secret-manager
      
      containers:
      - name: one8pulse-configserver
        image: public.ecr.aws/t3q3l4n7/backend/configserver:7
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
        volumeMounts:
          - name: secrets-store
            mountPath: "/mnt/secrets"
            readOnly: true
        resources:
          requests:
            cpu: 200m
            memory: 384Mi
          limits:
            cpu: 500m
            memory: 512Mi
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8888
          periodSeconds: 5
          failureThreshold: 24  
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8888
          initialDelaySeconds: 30
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8888
          initialDelaySeconds: 10
          periodSeconds: 10


      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "one8pulse-secrets"
---
apiVersion: v1
kind: Service
metadata:
  name: one8pulse-configserver-service
  namespace: one8pulse
spec:
  selector:
    app: one8pulse
    component: configserver
  ports:
  - port: 8888
    targetPort: 8888
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: one8pulse-configserver-ingress
  namespace: one8pulse
  annotations:
    alb.ingress.kubernetes.io/group.name: one8pulse-internet-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:658548981947:certificate/d83e36ad-c6b5-43da-aefe-844cf88a67de
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-port: "8888"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/success-codes: "200"
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: configserver.one8pulse.devcloudzone.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: one8pulse-configserver-service
            port:
              number: 8888
